--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                     <img src="images_copy/1900.jpg">
                     <div>
                         <h5>Products Name</h5>
-                        <h6>₽199</h6>
+                        <h6>199</h6>
                         <div>
                             <button>-</button>
                             <span class="countOfProduct">1</span>
@@ -115,7 +115,7 @@
                                 <span>4XL</span>
                             </div>
                             <p>Z За победу, Экологичная HD печать</p>
-                            <span class="priceValue">1900 ₽</span>
+                            <span class="priceValue">1900</span>
                             <button class="add-to-cart addToCart" data-product-id="1">
                                 добавить в корзину
                             </button>
@@ -142,7 +142,7 @@
                                 <span>4XL</span>
                             </div>
                             <p>Воин, а не кроха, Экологичная HD печать</p>
-                            <span class="priceValue">2100 ₽</span>
+                            <span class="priceValue">2100</span>
                             <button class="add-to-cart addToCart" data-product-id="2">
                                 добавить в корзину
                             </button>
@@ -168,7 +168,7 @@
                                 <span>4XL</span>
                             </div>
                             <p>#СвоихНеБросаем, Экологичная HD печать</p>
-                            <span class="priceValue">2250 ₽</span>
+                            <span class="priceValue">2250</span>
                             <button class="add-to-cart addToCart" data-product-id="3">
                                 добавить в корзину
                             </button>
@@ -193,7 +193,7 @@
                                 <span>4XL</span>
                             </div>
                             <p>Армия Z, Экологичная HD печать, Карманы, капюшон</p>
-                            <span class="priceValue">2200 ₽</span>
+                            <span class="priceValue">2200</span>
                             <button class="add-to-cart addToCart" data-product-id="4">
                                 добавить в корзину
                             </button>
@@ -218,7 +218,7 @@
                                 <span>4XL</span>
                             </div>
                             <p>Zа Россию, Карманы, капюшон, сетка в капюшоне</p>
-                            <span class="priceValue">2000 ₽</span>
+                            <span class="priceValue">2000</span>
                             <button class="add-to-cart addToCart" data-product-id="5">
                                 добавить в корзину
                             </button>
